styles/settings.css
.settings {
  display: flex;
  justify-content: center;
}

.settings__button {
  background: none;
  border-radius: 15px;
  border: var(--BORDER);
  color: var(--FG-COLOR);
  font-size: var(--TEXT-MD);
  font-weight: var(--FW-MEDIUM);
  line-height: var(--LH-NORMAL);
  width: 50%;
  padding-inline: 1rem;
  padding-block: 0.5rem;
}

.settings__button:hover {
  cursor: pointer;
}

.settings__selector {
  font-size: var(--TEXT-SM);
  font-weight: var(--FW-REGULAR);
  line-height: var(--LH-NORMAL);
  border-radius: 15px;
  border: var(--BORDER);
  padding-inline: 0.5rem;
  height: 1.75rem;
  outline: none;
  font-family: "Outfit", sans-serif;
}

.settings__selector:hover {
  cursor: pointer;
}

.settings-toggle {
  border-radius: 15px;
  width: fit-content;
  position: relative;
  border: var(--BORDER);
  display: flex;
  align-items: center;
  padding-inline: 0.25rem;
}

.settings-toggle__checkbox {
  appearance: none;
  background: none;
  display: flex;
  justify-content: space-between;
  width: 2.5rem;
  gap: 0.1rem;
}

.settings-toggle__checkbox:hover {
  cursor: pointer;
}

.settings-toggle__checkbox::before {
  content: "";
  display: block;
  border-radius: 15px;
  background-color: var(--FG-COLOR);
  height: 1rem;
  width: 1rem;
}

.settings-toggle__checkbox::after {
  content: "";
  border-radius: 15px;
  background-color: var(--FG-COLOR);
  left: 1.5rem;
  height: 1rem;
  width: 1rem;
  opacity: 0;
}

.settings-toggle__checkbox:checked::before {
  opacity: 0;
}

.settings-toggle__checkbox:checked::after {
  opacity: 1;
}

.settings-sections {
  width: 100%;
  max-width: 35rem;
  display: grid;
  grid-template-columns: 2fr 1fr;
  gap: 1.5rem;
}

.settings-section {
  display: grid;
  row-gap: 0.45rem;
  grid-template-columns: subgrid;
  grid-column: 1 / -1;
}

.settings-section__name {
  grid-column: 1 / -1;
}

.settings-section__options {
  display: grid;
  grid-template-columns: subgrid;
  grid-column: 1 / -1;
  row-gap: 0.75rem;
}

.setting {
  display: grid;
  grid-template-columns: subgrid;
  grid-column: 1 / -1;
}

.setting__name {
  font-size: var(--TEXT-MD);
  font-weight: var(--FW-REGULAR);
  line-height: var(--LH-NORMAL);
  padding-right: 0.5rem;
}

.setting__setter {
  font-size: var(--TEXT-MD);
  font-weight: var(--FW-REGULAR);
  line-height: var(--LH-NORMAL);
  display: flex;
  justify-content: flex-start;
  align-items: center;
  position: relative;
  gap: 0.25rem;
}

.pen-icon:hover {
  cursor: pointer;
}

@media screen and (min-width: 1025px) {
  .settings {
    justify-content: flex-start;
  }
}

